testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod3_Js.errors.txt
/a.js(9,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class A {
    	get arguments() {
    		return { bar: {} };
    	}
    }
    
    class B extends A {
    	/**
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	m(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this.x = foo;
    
    		/**
    		 * @type object
    		 */
    		this.y = super.arguments.bar;
    	}
    }
    